# fetch-pharma-papers

./: README.md  project-report.md
pharma-papers-cli/: .gitignore  README.md  pyproject.toml
pharma-papers-cli/pharma_papers_cli/: __init__.py  cli.py
pharma_papers_core/: README.md  pyproject.toml
pharma_papers_core/pharma_papers/: __init__.py  api.py  processor.py  utils.py
pharma_papers_core/tests/: test_pharma_papers.py
