[tool.poetry]
name = "pharma-papers-cli"
version = "0.1.0"
description = "CLI tool for finding research papers with pharmaceutical company authors"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "pharma_papers_cli"}]
repository = "https://github.com/pramod24cr/pharma-papers"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = "^3.9"
typer = "^0.9.0"
pharma-papers-core = "^0.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.7.0"
mypy = "^1.5.1"
isort = "^5.12.0"

[[tool.poetry.source]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
priority = "primary"


[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
get-papers-list = "pharma_papers_cli.cli:app"
