[tool.poetry]
name = "pharma-papers-core"
version = "0.1.0"
description = "Core library for finding research papers with pharmaceutical company authors"
authors = ["pramod24cr <pramod24cr@gmail.com>"]
readme = "README.md"
packages = [{include = "pharma_papers"}]
repository = "https://github.com/pramod24cr/pharma-papers"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.31.0"
pandas = "^2.1.0"
typing-extensions = "^4.8.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.7.0"
mypy = "^1.5.1"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
